# GoliveLeo

./: .env  .gitignore  CLAUDE.md  List.csv  Notes.txt  README.md  SX0100-08-2_200.pro  SX0100-08.pr2  SX0200-02.pro  SX0201-01b.pr2  SX0201-10b.pr2  SX0201-60b.pr2  SX0300-54.pro  admin.py  debug_bcrypt.py  main.py  mia.json  migrate_sqlite_to_postgres.py  pyproject.toml  requirements.txt  translations.js  users-2025-04-23_122139.csv  users.db
.github/workflows/: deploy.yml
RESOURCES/: # Code Citations.md  admin_brand.html  admin_brand_country.html  admin_country.html  files_by_brand.html  login.html  register.html  select_brand.html  select_country.html  traduzioni.js  translations_example.html
static/: translations.js
